# writing-style-analyzer

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SCRIPTS_README.md  TODO.md  analyze.py  config.yaml  german_academic_analyzer.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml
linguistic_patterns/: .gitignore
linguistic_patterns/base/: SOURCES.md  de_academic.yaml  en_academic.yaml
tests/: README.md  __init__.py  config.yaml  conftest.py  generate_baselines.py  llm_clients.py  test_analysis.py  test_llm_validation.py  test_profiles.py  test_regression.py
tests/baselines/: baseline_long_text.json  baseline_short_text.json
tests/fixtures/: sample_profile_default.json  sample_profile_excellence.json  sample_text_long.txt  sample_text_short.txt
texts/examples/blog/: post1.txt  post2.txt
texts/examples/social/: thread1.txt  thread2.txt
